--- a/.github/workflows/ai-pr-review.yaml
+++ b/.github/workflows/ai-pr-review.yaml
@@ -53,12 +53,12 @@ jobs:
           git fetch origin ${{ github.base_ref }}  # e.g., 'main'
           git diff origin/${{ github.base_ref }} > pr_diff.patch
 
-      - name: Wait for Qdrant service
-        run: |
-          echo "Waiting for Qdrant to be healthy..."
-          for i in {1..10}; do
-            curl -f http://localhost:6333/collections && break || sleep 3
-          done
+      #- name: Wait for Qdrant service
+      #  run: |
+      #    echo "Waiting for Qdrant to be healthy..."
+      #    for i in {1..10}; do
+      #      curl -f http://localhost:6333/collections && break || sleep 3
+      #    done
 
       - name: Run Python script
         run: |
