experimental: debugging purpose fix
Signed-off-by: Junya Sasaki <junya.sasaki@tier4.jp>

--- a/.github/workflows/ai-pr-review.yaml
+++ b/.github/workflows/ai-pr-review.yaml
@@ -13,7 +13,7 @@ jobs:
         ports:
           - 6333:6333
         options: >-
-          --health-cmd "curl -f http://localhost:6333/collections || exit 1"
+          --health-cmd "nc -z localhost 6333 || exit 1"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
