--- a/.github/workflows/ai-pr-review.yaml
+++ b/.github/workflows/ai-pr-review.yaml
@@ -12,11 +12,11 @@ jobs:
         image: j2sasaki/qdrant-with-data
         ports:
           - 6333:6333
-        options: >-
-          --health-cmd "nc -z localhost 6333 || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+        #options: >-
+        #  --health-cmd "nc -z localhost 6333 || exit 1"
+        #  --health-interval 10s
+        #  --health-timeout 5s
+        #  --health-retries 5
 
     env:
       COMMIT_SHA: ${{ github.event.pull_request.head.sha || 'dummy-sha-for-manual-trigger' }}
