--- a/.github/workflows/ai-pr-review.yaml
+++ b/.github/workflows/ai-pr-review.yaml
@@ -1,10 +1,14 @@
 name: AI PR Review with Python and Qdrant
 
 on:
-  workflow_dispatch:  # Manually trigger the action
+  #workflow_dispatch:  # Manually trigger the action
+  pull_request:
+    types: [ready_for_review]
 
 jobs:
   review-with-ai:
+    # Allow only when the user is sasakisasaki
+    if: github.event.pull_request.user.login == 'sasakisasaki'
     runs-on: ubuntu-latest
 
     services:
@@ -12,11 +16,6 @@ jobs:
         image: j2sasaki/qdrant-with-data
         ports:
           - 6333:6333
-        options: >-
-          --health-cmd "curl -f http://localhost:6333/collections || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     env:
       COMMIT_SHA: ${{ github.event.pull_request.head.sha || 'dummy-sha-for-manual-trigger' }}
@@ -38,11 +37,14 @@ jobs:
 
       - name: Checkout Code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.base_ref }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.10'
 
       - name: Install Python dependencies
         run: |
@@ -50,18 +52,10 @@ jobs:
 
       - name: Fetch base branch and generate git diff
         run: |
-          git fetch origin ${{ github.base_ref }}  # e.g., 'main'
-          git diff origin/${{ github.base_ref }} > pr_diff.patch
-
-      #- name: Wait for Qdrant service
-      #  run: |
-      #    echo "Waiting for Qdrant to be healthy..."
-      #    for i in {1..10}; do
-      #      curl -f http://localhost:6333/collections && break || sleep 3
-      #    done
+          git fetch origin ${{ github.base_ref }}
+          git diff origin/${{ github.base_ref }}... > pr_diff.patch
 
       - name: Run Python script
         run: |
           export PYTHONPATH="${GITHUB_WORKSPACE}/.github/scripts"
           python .github/scripts/do_chunk_review.py --diff_file pr_diff.patch
-
