experimental: debugging purpose fix
Signed-off-by: Junya Sasaki <junya.sasaki@tier4.jp>

--- a/.github/workflows/ai-pr-review.yaml
+++ b/.github/workflows/ai-pr-review.yaml
@@ -54,6 +54,7 @@ jobs:
         run: |
           git fetch origin ${{ github.base_ref }}
           git diff origin/${{ github.base_ref }}... > pr_diff.patch
+          cat pr_diff.patch
 
       - name: Run Python script
         run: |
