--- a/.github/workflows/ai-pr-review.yaml
+++ b/.github/workflows/ai-pr-review.yaml
@@ -39,7 +39,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.base_ref }}
+          ref: ${{ github.event.pull_request.head.ref }}
+
+      - name: Fetch base branch
+        run: |
+          git fetch origin ${{ github.base_ref }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -52,7 +56,6 @@ jobs:
 
       - name: Fetch base branch and generate git diff
         run: |
-          git fetch origin ${{ github.base_ref }}
           git diff origin/${{ github.base_ref }}... > pr_diff.patch
           cat pr_diff.patch
 
