bug: fix missing variable
Signed-off-by: Junya Sasaki <junya.sasaki@tier4.jp>

--- a/.github/workflows/ai-pr-review.yaml
+++ b/.github/workflows/ai-pr-review.yaml
@@ -63,3 +63,5 @@ jobs:
         run: |
           export PYTHONPATH="${GITHUB_WORKSPACE}/.github/scripts"
           python .github/scripts/do_chunk_review.py --diff_file pr_diff.patch
+        env:
+          GITHUB_TOKEN: ${{ steps.token.outputs.token }}
